--- a/requirements.txt
+++ b/requirements.txt
@@ -1,33 +1,39 @@
-Babel==2.2.0
-Flask==0.10.1
-Flask-Admin==1.4.0
-Flask-Migrate==1.7.0
-Flask-SQLAlchemy==2.1
-Flask-Script==2.0.5
-Jinja2==2.8
-Mako==1.0.3
-MarkupSafe==0.23
-Pillow==3.1.0
-PyMySQL==0.7.1
-SQLAlchemy==1.0.11
-WTForms==2.1
-Werkzeug==0.11.3
 alembic==0.8.4
 amqp==1.4.9
 anyjson==0.3.3
+Babel==2.2.0
 backports-abc==0.4
 beautifulsoup4==4.4.1
 billiard==3.3.0.22
 celery==3.1.19
 flake8==2.5.1
+Flask==0.10.1
+Flask-Admin==1.4.0
+Flask-Celery==2.4.3
+Flask-Migrate==1.7.0
+Flask-OAuth==0.12
+Flask-Script==2.0.5
+Flask-SQLAlchemy==2.1
+Flask-Testing==0.5.0
 flower==0.8.4
+httplib2==0.9.2
 img2pdf==0.1.5
 itsdangerous==0.24
+Jinja2==2.8
 kombu==3.0.33
+Mako==1.0.3
+MarkupSafe==0.23
 mccabe==0.3.1
+natsort==5.0.1
+oauth2==1.9.0.post1
 pep8==1.7.0
+Pillow==3.1.0
 pyflakes==1.0.0
+PyMySQL==0.7.1
 python-editor==0.5
 pytz==2015.7
 requests==2.9.1
+SQLAlchemy==1.0.11
 tornado==4.3
+Werkzeug==0.11.3
+WTForms==2.1
